syntax = "proto3";

package com.opthema.hcm.grpc.user;

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message UserRequest {
  repeated int64 ids = 1;
}

message UserResponse {
  repeated User users = 1;
}

service UserService {
  rpc GetUsers(UserRequest) returns (UserResponse);
}
